# rain_autonomous_ship_control

./: README.md
global_path_service/: CMakeLists.txt  package.xml
global_path_service/srv/: GetGlobalPath.srv
goal_position_msg/: CMakeLists.txt  package.xml
goal_position_msg/msg/: GoalPosition.msg
rain_boat/: package.xml  setup.cfg  setup.py
rain_boat/rain_boat/: boat_dock.py  boat_path.py  goalpos_to_pos.py  trajectory_analysis.py  turtlebot_dock.py  turtlebot_launch.py  turtlebot_path.py
